# ChineseCalendar

./: .gitignore  README.md  bundle.js  bundleprod.js  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js  wrangler.toml
bazi/: __init__.py
bazi.egg-info/: SOURCES.txt
bazi/config/: __init__.py  calendar.yml  settings.py
bazi/models/: __init__.py  base.py  fortune.py  pillar.py  time_location.py
bazi/services/: __init__.py  basic_data.py  fortune.py  pillar.py  time_location.py
bazi/utils/: __init__.py  helpers.py
examples/: basic_usage.py
script_surge/: log_req.js
scriptable/: bazi_now.js  download_gh.js  jieqi_now.js
src/: bazi.js  calendar.js  calendarData.js  constants.js  dt.js  eclipse_linksM722-2202.js  index.js  jd.js  math.js  split.js  utilities.js  xl.js  xlconst.js  yearCalendar.js
src/test/: acalendar.test.js  bazi.test.js  bundle.test.js  calendar.test.js  math.test.js  test.test.js
src2/: ancientCalendars.js
tests/: test_basic_data.py  test_fortune.py  test_pillar.py  test_time_location.py
